add warning icon when custom and condition weights don't add up, refactor helper methods to make them shareable between components and consistent

--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-conditions-section-card/experiment-conditions-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-conditions-section-card/experiment-conditions-section-card.component.html
@@ -5,6 +5,7 @@
     [title]="'experiments.details.conditions.card.title.text' | translate"
     [subtitle]="'experiments.details.conditions.card.subtitle.text' | translate"
     [tableRowCount]="experiment.conditions?.length || 0"
+    [warningMessage]="weightWarningText$ | async"
   ></app-common-section-card-title-header>
 
   <!-- header-right -->
