--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-status-indicator-chip/common-status-indicator-chip.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-status-indicator-chip/common-status-indicator-chip.component.scss
@@ -89,10 +89,7 @@
   }
 
   .warning-icon {
+    margin-top: 6px;
     margin-left: 6px;
-    font-size: 20px;
-    width: 20px;
-    height: 20px;
-    color: var(--status-disabled);
   }
 }
