--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-title-header/common-section-card-title-header.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-title-header/common-section-card-title-header.component.scss
@@ -12,6 +12,11 @@
     .status-chip {
       margin-left: 8px;
     }
+
+    .warning-icon {
+      margin-top: 6px;
+      margin-left: 8px;
+    }
   }
 
   .subtitle {
