--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-enrollment-data-section-card/experiment-enrollment-data-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-enrollment-data-section-card/experiment-enrollment-data-section-card.component.html
@@ -10,17 +10,11 @@
   <app-common-section-card-action-buttons
     header-right
     [showPrimaryButton]="false"
-    [showMenuButton]="(permissions$ | async)?.experiments.update"
-    [menuButtonItems]="menuButtonItems"
     [isSectionCardExpanded]="isSectionCardExpanded"
-    (menuButtonItemClick)="onMenuButtonItemClick($event, experiment)"
     (sectionCardExpandChange)="onSectionCardExpandChange($event)"
   >
   </app-common-section-card-action-buttons>
 
   <!-- content -->
-  <app-experiment-enrollment-data
-    content
-    *ngIf="isSectionCardExpanded"
-  ></app-experiment-enrollment-data>
+  <app-experiment-enrollment-data content *ngIf="isSectionCardExpanded"></app-experiment-enrollment-data>
 </app-common-section-card>
