--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/modals/upsert-condition-modal/upsert-condition-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/modals/upsert-condition-modal/upsert-condition-modal.component.html
@@ -7,7 +7,6 @@
   (primaryActionBtnClicked)="onPrimaryActionBtnClicked()"
 >
   <form [formGroup]="conditionForm" class="form-standard dense-3">
-
     <mat-form-field appearance="outline">
       <mat-label class="ft-14-400">Condition</mat-label>
       <input
@@ -16,13 +15,10 @@
         placeholder="e.g., control"
         class="ft-14-400"
         [matAutocomplete]="conditionCodeAutocomplete"
+        appTrimInput
       />
       <mat-autocomplete #conditionCodeAutocomplete="matAutocomplete" panelWidth="auto">
-        <mat-option
-          *ngFor="let condition of filteredConditions$ | async"
-          [value]="condition"
-          class="ft-14-400"
-        >
+        <mat-option *ngFor="let condition of filteredConditions$ | async" [value]="condition" class="ft-14-400">
           {{ condition }}
         </mat-option>
       </mat-autocomplete>
@@ -41,8 +37,8 @@
         formControlName="description"
         placeholder="e.g., Control group with no changes"
         class="ft-14-400"
+        appTrimInput
       />
     </mat-form-field>
-
   </form>
 </app-common-dialog>
