convert to standalone and add to new data tab

--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-enrollment-data-section-card/experiment-enrollment-data-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-enrollment-data-section-card/experiment-enrollment-data-section-card.component.html
@@ -16,5 +16,9 @@
   </app-common-section-card-action-buttons>
 
   <!-- content -->
-  <app-experiment-enrollment-data content *ngIf="isSectionCardExpanded"></app-experiment-enrollment-data>
+  <home-enrollment-over-time
+    content
+    [experiment]="experiment"
+    *ngIf="isSectionCardExpanded"
+  ></home-enrollment-over-time>
 </app-common-section-card>
